# balorcve

./: README.md  README_fr.md  pyproject.toml
balorcve/: cli.py  core.py  i18n.py
